change icon to medium blog

--- a/demo/multi-paragraph.html
+++ b/demo/multi-paragraph.html
@@ -29,6 +29,7 @@
         var editor = new MediumEditor('.editable', {
             delay: 0,
             toolbar: {
+                buttons: ['m-bold','T','t', 'm-quote'],
                 diffTop: -12,
                 allowMultiParagraphSelection: false
             },
